entro-prediction-deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "entro-prediction"
  namespace: "default"
  labels:
    app: "entro-prediction"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "entro-prediction"
  template:
    metadata:
      labels:
        app: "entro-prediction"
    spec:
      containers:
        - name: "entro-prediction"
          image: "us.gcr.io/entro-production/entro-prediction:latest"
          resources:
            limits:
              nvidia.com/gpu: 1
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
# ---
# apiVersion: "autoscaling/v2beta1"
# kind: "HorizontalPodAutoscaler"
# metadata:
#   name: "entro-prediction-hpa-ncvz"
#   namespace: "default"
#   labels:
#     app: "entro-prediction"
# spec:
#   scaleTargetRef:
#     kind: "Deployment"
#     name: "entro-prediction"
#     apiVersion: "apps/v1"
#   minReplicas: 1
#   maxReplicas: 1
#   metrics:
#   - type: "Resource"
#     resource:
#       name: "cpu"
#       targetAverageUtilization: 100
