entro-prediction-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: entro-prediction-service
spec:
  selector:
    app: entro-prediction
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
